# smooth

./: README.md
doc/: User Manual.tex  header.tex  smooth.tex
doc/User Manual/: main.tex
doc/User_Manual/: UserManual.aux  UserManual.out  UserManual.toc  appendix.tex  emulator.tex  fullmodel.tex  installation.tex  main.tex  mcmc.tex  pca.tex  realmodel.tex  simplex.tex  theory.tex  tutorial.tex
doc/files/: UserManual.tex  emulator.tex  figs.tex  fullmodel.tex  installation.tex  mcmc.tex  pca.tex  tpo.tex  (+3 more)
ekakshrun/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  coultest  fakemodcls.cc  fakemodel.cc  keepscore  keepscore.cc  simplextest  simplextest.cc  smoothmain.cc  smoothy  smoothy_readcoefficients  smoothy_writecoefficients  try
ekakshrun/coefficients/length/: sample0.txt  sample1.txt  sample2.txt  sample3.txt  sample4.txt
ekakshrun/coefficients/mass/: meta.txt  sample0.txt  sample1.txt  sample2.txt  sample3.txt  sample4.txt
ekakshrun/coefficients/time/: sample0.txt  sample1.txt  sample2.txt  sample3.txt  sample4.txt
ekakshrun/figs/: coulomb.txt  hypercube.py  hypercubedata.txt  runner.sh
ekakshrun/modelruns/run0/: obs.txt
ekakshrun/modelruns/run1/: obs.txt
ekakshrun/modelruns/run10/: obs.txt
ekakshrun/modelruns/run11/: obs.txt
ekakshrun/modelruns/run12/: mod_parameters.txt  obs.txt
ekakshrun/modelruns/run13/: obs.txt
ekakshrun/modelruns/run14/: obs.txt
ekakshrun/modelruns/run2/: obs.txt
ekakshrun/modelruns/run3/: obs.txt
ekakshrun/modelruns/run4/: obs.txt
ekakshrun/modelruns/run5/: obs.txt
ekakshrun/modelruns/run6/: obs.txt
ekakshrun/modelruns/run7/: obs.txt
ekakshrun/modelruns/run8/: obs.txt
ekakshrun/modelruns/run9/: obs.txt
ekakshrun/modelruns_test/run1/: obs.txt
ekakshrun/parameters/: emulator_parameters.txt  parameters.txt
erenrun/: CMakeCache.txt  CMakeLists.txt  Makefile  PCA  PCA.cc  cmake_install.cmake  fakemodel  keepscore  keepscore.cc  matrixTest.cc  parameters.txt  simplextest  smoothmain.cc  smoothy  smoothy.cc  smoothy_readcoefficients  smoothy_writecoefficients
karinarun/: CMakeLists.txt  parameters.txt  plot.py  smoothmain.cc  testemulator.cc  testmodel.cc  testreal.cc
mcmc/: langvien_hard_cut_MH.cpp  langvien_hard_cut_same_pos.cpp  langvien_n_dim.cpp
notes/: frederi.tex
old_software/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
project1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  coffee  coffee.cpp  coffee1  coffee1.cpp  coffee2  coffee2.cpp  keepscore  keepscore.cc  obs.txt  obs_test1  obs_test1.cc  obs_test2.cpp  parameters.txt  tea  tea.cc
project1/Info/: mod_parametes_info.txt  model_paramertes_info.cpp  model_params_info
project1/fakeModel/: fakeModel.cc
project1/modelruns/run0/: mod_parametes.txt  obs.txt
project1/modelruns/run1/: mod_parameters.txt  obs.txt
project1/modelruns/run2/: mod_parameters.txt  obs.txt
project1/modelruns/run3/: mod_parameters.txt  obs.txt
project1/modelruns/run4/: mod_parameters.txt  obs.txt
project1/modelruns/run5/: mod_parameters.txt  obs.txt
project1/modelruns/run6/: mod_parameters.txt  obs.txt
project1/modelruns/run7/: mod_parameters.txt  obs.txt
project1/modelruns/run8/: mod_parameters.txt  obs.txt
scottrun/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  coultest  fakemodel  keepscore  keepscore.cc  oldsmooth.cc  parameters.txt  permute_example.cc  simplextest  simplextest.cc  smoothmain.cc  smoothy  smoothy.cc  smoothy_readcoefficients.cc  smoothy_writecoefficients  smoothy_writecoefficients.cc
scottrun/Info/: observable_info.txt
scottrun/figs/testresults_NTrain3/: real0.txt  real1.txt  real2.txt  real3.txt  real4.txt  real5.txt  real6.txt  real7.txt  real8.txt  real9.txt
scottrun/modelruns/run0/: obs.txt
scottrun/modelruns_test/run0/: obs.txt
scottrun/modelruns_test/run1/: obs.txt
scottrun/modelruns_test/run2/: obs.txt
scottrun/modelruns_test/run3/: obs.txt
scottrun/modelruns_test/run4/: obs.txt
scottrun/parameters/: emulator_parameters.txt  emulator_parameters_test.txt  parameters.txt  simplex_parameters.txt  simplex_parameters_test.txt
software/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
software/include/: emulator.h  parameterinfo.h  real.h  simplex.h  smooth.h
software/include/msu_commonutils/: commondefs.h  commonutils.h  log.h  misc.h  parametermap.h  randy.h  sf.h
software/include/msu_smooth/: PCA.h  eeek.h  emulator.h  master.h  mcmc.h  modelparameterinfo.h  modelparinfo.h  observableinfo.h  pca.h  priorinfo.h  real.h  scorecard.h  simplex.h  smooth.h  testinginfo.h  traininginfo.h  trainingpoint_optimizer.h
software/include_jan23/: emulator.h  smooth.h
software/oldsrc/: oldllcalc.cc  oldmaster.cc  oldsimplex.cc  testinfo.cc
software/src/: PCA.cc  eeek.cc  emulator.cc  emulator_CalcY.cc  emulator_current.cc  emulator_io.cc  latincube.cc  llcalc.cc  master.cc  masterio.cc  mcmc.cc  mcmc_evaluate.cc  modelparinfo.cc  observableinfo.cc  parameterinfo.cc  prior.cc  real.cc  real.h  scorecard.cc  simplex.cc  smooth.cc  smooth_CalcY.cc  smooth_linear.cc  smoothmaster.cc  traininginfo.cc  tune_exact.cc
software/src/commonutils/Log/: log.cc
software/src/commonutils/Misc/: lorentzboost.cc  misc.cc
software/src/commonutils/NumMath/: randy.cc
software/src/commonutils/ParameterMap/: parametermap.cc
software/src/smooth/: emulator.cc  emulator_CalcY.cc  emulator_io.cc  emulator_siglambda.cc  emulator_tuneMC.cc  emulator_tune_exact.cc  latincube.cc  llcalc.cc  master.cc  master_test.cc  masterio.cc  mcmc.cc  mcmc_evaluate.cc  modelparinfo.cc  observableinfo.cc  pca.cc  prior.cc  scorecard.cc  simplex.cc  simplex_IJK.cc  simplex_getsigma.cc  simplex_optimize.cc  smooth.cc  smooth_CalcY.cc  testinginfo.cc  tpo.cc  tpo_subs.cc  training_point.cc  traininginfo.cc  trainingpoint_IJK.cc  trainingpoint_optimize.cc
software/src_jan23/: emulator.cc  real.cc
software_copy/: CMakeCache.txt  CMakeLists.txt  Makefile
template/: CMakeCache.txt  CMakeLists.txt
tests/: CMakeLists.txt  Makefile  coffee2  obs.txt  obs_test2
(+83 files in other folders)
